samples/_failures_safe/1761088057_2edc35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebf0567.c: In function ‘main’:
./samples/SAFE/__tmp_9ebf0567.c:156:5: error: expected expression at end of input
  156 |     mat2.cols = read_int("  Columns (1-10): ",
      |     ^~~~
./samples/SAFE/__tmp_9ebf0567.c:156:17: error: too few arguments to function ‘read_int’
  156 |     mat2.cols = read_int("  Columns (1-10): ",
      |                 ^~~~~~~~
./samples/SAFE/__tmp_9ebf0567.c:20:5: note: declared here
   20 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_9ebf0567.c:156:5: error: expected declaration or statement at end of input
  156 |     mat2.cols = read_int("  Columns (1-10): ",
      |     ^~~~
